semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser_cli_pattern/error.txt
semgrep error: invalid pattern
  --> CLI Input:1
1 | #include<asdf><<>>><$X>
  | ^^^^^^^^^^^^^^^^^^^^^^

Pattern could not be parsed as a C semgrep pattern

